@@ -1,6 +1,15 @@
 # ChangeLog for media-sound/jack_mixer
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*jack_mixer-10 (23 Jul 2015)
+
+  23 Jul 2015; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  -jack_mixer-9.ebuild, +jack_mixer-10.ebuild, jack_mixer-9999.ebuild:
+  migrate to python-single-r1
+  make ebuilds identical
+  version bump
+  drop old
 
   19 Mar 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net> metadata.xml:
   remove unnecessary lash use flag description from metadata.xml
